--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: "1.18"
-      - uses: ifaxity/wait-on-action
+      - uses: ifaxity/wait-on-action@v1
         with:
           resource: tcp://127.0.0.1:3306
       - run: go test -config config.github.toml
