--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -20,4 +20,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: "1.18"
+      - run: docker ps
+      - run: docker logs $(docker ps -q | head -n 1)
+      - run: docker logs $(docker ps -lq)
       - run: go test -config config.github.toml
