--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -23,4 +23,11 @@ jobs:
       - run: docker ps
       - run: docker logs $(docker ps -q | head -n 1)
       - run: docker logs $(docker ps -lq)
+      - uses: ifaxity/wait-on-action@v1
+        with:
+          resource: tcp://127.0.0.1:3306
+          timeout: 10000
+      - run: docker ps
+      - run: docker logs $(docker ps -q | head -n 1)
+      - run: docker logs $(docker ps -lq)
       - run: go test -config config.github.toml
