--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: "1.18"
+      - run: docker logs -f $(docker ps -ql)
       - uses: ifaxity/wait-on-action@v1
         with:
           resource: tcp://127.0.0.1:3306
