debugging gh actions is hard

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -10,20 +10,21 @@ jobs:
         image: singlestore/cluster-in-a-box:alma-7.8.2-8c7b918527-4.0.5-1.13.6
         ports:
           - 3306:3306
+          - 9000:9000
         env:
           LICENSE_KEY: ${{ secrets.SINGLESTORE_LICENSE }}
           ROOT_PASSWORD: "test"
           START_AFTER_INIT: "Y"
+          HTTP_API: "on"
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
           go-version: "1.18"
-      - run: docker logs -f $(docker ps -ql)
       - uses: ifaxity/wait-on-action@v1
         with:
-          resource: tcp://127.0.0.1:3306
+          resource: http://127.0.0.1:9000/ping
           timeout: 10000
       - run: docker logs $(docker ps -ql)
       - run: go test -config config.github.toml
